# Capstone

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  app.js  credentials.example.js  index.html  local-compilation-command.md  pipeline description.md  style.css  temp_tree.json
.tmp/: criteria_extracted.txt
android_runner/: README.md  settings.gradle
baselines/: dial_main.cpp  dijkstra  dijkstra_main.cpp  via_dial_main.cpp  via_dijkstra_main.cpp
benchmarks/: README.md
data/: GLAS_5.lad  GLAS_SUB_5.lad  README.md  dijkstra1.csv  dijkstra_sample.csv  dijkstra_sample.txt  dijkstra_weighted_graph_1.csv  dijkstra_weighted_graph_2.csv  glasgowtarget1.lad  pattern1_glassgow.csv  pattern1_vf3.txt  target1_glasgow.csv  target1_vf3.txt  vf3(500 pattern test triangle).grf  vf3(500 target test).grf  vf3(large dense pattern).grf  vf3(large dense target).grf  vf3pattern1.grf  vf3pattern1.txt  vf3pattern2.grf  vf3target1.grf  vf3target1.txt  vf3target2.grf
data_collection/: 01_shortest_dijkstra_scaling_er.json  02_shortest_dijkstra_density_er.json  03_shortest_sp_via_scaling_er.json  04_shortest_datasets_dijkstra.json  05_subgraph_vf3_scaling_er.json  06_subgraph_vf3_phase_transition_er.json  07_subgraph_glasgow_density_er.json  08_subgraph_glasgow_density_ba.json  09_subgraph_datasets_vf3.json  10_subgraph_datasets_glasgow.json  11_subgraph_vf3_prompt_treatment_er.json  12_subgraph_glasgow_prompt_treatment_er.json  13_subgraph_cross_family_prompt_matched_er.json  14_shortest_dijkstra_regime_matrix_er.json  README.md
desktop_runner/: README.md  app.py  build_runner.py  build_unix_bundle.py  build_windows_exe.ps1  datasets_catalog.json  headless_runner.py  requirements.txt
docs/: README.md  datasets.md  external_dataset_shortlist.md  pipeline-description.md  prompt_dijkstra_control.txt  prompt_dijkstra_dense.txt  prompt_dijkstra_sparse.txt  prompt_glasgow_control.txt  prompt_glasgow_dense.txt  prompt_glasgow_sparse.txt  prompt_vf3_control.txt  prompt_vf3_dense.txt  prompt_vf3_sparse.txt  prompting_protocol.md  quickstart.md  refactor-split-manifest.json  refactor-split-structure.md  result-schema.md
outputs/: README.md  result.json
scripts/: benchmark-runner.py  (+14 more)
(+194 files in other folders)
